Fix(Tiptap): Codeblock overflow시 복사 버튼, 언어 표시 같이 스크롤되는 문제

--- a/src/components/Tiptap/Tiptap.scss
+++ b/src/components/Tiptap/Tiptap.scss
@@ -102,7 +102,7 @@
         font-family: 'JetBrainsMono', monospace;
 
         code {
-          @apply block w-max bg-none p-0 text-sm text-inherit;
+          @apply block w-max py-6 px-4 text-sm text-inherit;
         }
 
         .hljs-comment,
